--- a/style/style.css
+++ b/style/style.css
@@ -1,37 +1,23 @@
-body {
+* {
 	margin:0;
 	padding:0;
+	box-sizing:border-box;
 }
-div#container {
-	display:flex;
-	align-items:center;
-	justify-content:center;
-	width:100%;
-	height:100%;
-}
-div#box-login {
+div#container-box {
 	width:300px;
 	height:300px;
-	display:flex;
-	align-items:center;
-	justify-content:center;
-	background-color:#334477;
-	margin-top:60px;
-	padding:50px;
+	margin:auto;
+	background-color:blue;
 }
-div#box-input {
-	padding:150px;
-}
-div#box-input input{
-	margin-top:40px;
-	border-radius:15px;
-	border:none;
-}
-span {
+div#box-login {
+	display:block;
 	position:relative;
-	top:15px;
+	width:150px;
+	height:300px;
+	left:60px;
+	top:50px;
 }
-input#btm {
-	width:170px;
-	padding:10px;
+ div#box-login span {
+	display:block;
+	margin-top:30px;
 }
