--- a/style/style.css
+++ b/style/style.css
@@ -4,23 +4,29 @@
 	box-sizing:border-box;
 	font-family:sans-serif;
 }
+body{
+	background-color:#333;
+}
 div#container-box {
 	width:300px;
 	height:300px;
 	margin:auto;
 	background-color:blue;
+	border-radius:10px;
 }
 div#box-login {
 	display:block;
 	position:relative;
 	width:150px;
 	height:300px;
-	left:60px;
+	padding-left:25px;
+	left:40px;
 	top:50px;
 }
  div#box-login span {
 	display:block;
 	margin-top:30px;
+	color:white;
 	position:relative;
 	bottom:10px;
 }
@@ -36,4 +42,24 @@ input {
 	width:180px;
 	border:none;
 	padding:5px;
+}
+input#btm:hover {
+	background-color:#77aa33;
+	border-radius:0px;
+    color:white;
+	transition:0.5s;	
+}
+img#user {
+	width:25px;
+	height:25px;
+	position:absolute;
+	left:0px;
+	top:20px;
+}
+img#locker{
+	width:25px;
+	height:25px;
+	position:absolute;
+	left:0px;
+	top:92px;
 }
