--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,8 @@ div#container-box {
 	width:300px;
 	height:300px;
 	margin:auto;
+	position:relative;
+	top:65px;
 	background-color:blue;
 	border-radius:10px;
 }
